--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 baseurl: /
 #baseref: http://localhost:4000/
 baseref: http://felicitywestmacott.github.io/
+baseimageref: http://felicitywestmacott.co.uk/
