--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -27,6 +27,10 @@
    tt: wildtt.jpg
    classes: trad spec veil bride beading buttons princess floor cathedral sweet nostraps fish lightbone ivory satin lacefab man bellish
 
+ - link: hook1.html
+   tt: hooktt.jpg
+   classes: bride
+
  - link: travis1.html
    tt: travistt.jpg
    classes: trad vint bride cuffs zip buttons notrain floor flow sweet empire lightbone long ivory chiffon satin lacefab
