--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -5,6 +5,9 @@
    
  - label: 2013
 
+ -link: joseph1.html
+   tt: josephtt.jpg
+   classes: trad bride buttons layers sash sweet aline ivory 
 
  - link: sophie1.html
    tt: sophiett.jpg
