--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -7,7 +7,7 @@
 
  -link: joseph1.html
    tt: josephtt.jpg
-   classes: trad bride buttons layers sash sweet aline ivory 
+   classes: trad bride buttons zip layers sash sweet aline ivory 
 
  - link: sophie1.html
    tt: sophiett.jpg
