--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -4,7 +4,11 @@
    
    
  - label: 2013
-
+ 
+- link: harris1.html
+   tt: harristt.jpg
+   classes: bride embelish sweet fishtail  
+   
  - link: joseph1.html
    tt: josephtt.jpg
    classes: trad bride buttons zip layers sash sweet aline ivory 
@@ -80,6 +84,10 @@
  - link: butler1.html
    tt: butlertt.jpg
    classes: trad simp bellish veil bride zip offshould ruched wstraps floor quarter cathedral sweet over fish lightbone ivory dupion silk
+
+- link: allen1.html
+   tt: allentt.jpg
+   classes: bride zip offshoulder aline blue waterfall ruching 
 
  - link: white1.html
    tt: whitett.jpg
