--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -4,6 +4,10 @@
    
    
  - label: 2013
+ 
+ - link: harris1.html
+   tt: harristt.jpg
+   classes: bride embelish sweet fishtail
    
  - link: joseph1.html
    tt: josephtt.jpg
