--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -1,9 +1,5 @@
+  - label: 2013
  
-
-
-   
-   
- - label: 2013
  
  - link: harris1.html
    tt: harristt.jpg
@@ -11,7 +7,16 @@
    
  - link: joseph1.html
    tt: josephtt.jpg
-   classes: trad bride buttons zip layers sash sweet aline ivory 
+   classes: trad bride buttons zip layers sash sweet aline ivory
+   
+ - link: candler1.html
+   tt: candlertt.jpg
+   classes: vint bride buttons sash peplum halter vneck dupion silk lace   
+   
+
+   
+   
+ - label: 2013
 
  - link: sophie1.html
    tt: sophiett.jpg
