--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -1,4 +1,19 @@
 
+ 
+ - link: harris1.html
+   tt: harristt.jpg
+   classes: bride embelish sweet fishtail
+   
+ - link: joseph1.html
+   tt: josephtt.jpg
+   classes: trad bride buttons zip layers sash sweet aline ivory
+   
+ - link: candler1.html
+   tt: candlertt.jpg
+   classes: vint bride buttons sash peplum halter vneck dupion silk lace   
+   
+
+   
    
  - label: 2013
 
