--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -1,5 +1,9 @@
  - label: 2014
  
+ - link: hunter1.html
+   tt: huntertt.jpg
+   classes: sash trad bride buttons wstraps floor full sweet lightbone ivory lace
+ 
  - link: harris1.html
    tt: harristt.jpg
    classes: bride embelish sweet fishtail
