--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -14,12 +14,15 @@
    
  - link: candler1.html
    tt: candlertt.jpg
-   classes: vint bride buttons sash peplum halter vneck dupion silk lace   
+   classes: vint bride buttons sash peplum halter vneck dupion silk lace  
    
-
+ - link: huggett1.html
+   tt: huggetttt.jpg
+   classes:  bride high princess floor striaght ivory satin man lace long
    
    
  - label: 2013
+
 
  - link: sophie1.html
    tt: sophiett.jpg
