--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -36,6 +36,10 @@
    tt: keelytt.jpg
    classes: colour spar spec bride buttons puffed ruched wstraps floor cathedral full sweet waterfall cap lightbone ivory blue tulle taffeta silk
 
+ - link: wild1.html
+   tt: wildtt.jpg
+   classes: trad spec veil bride beading buttons princess floor cathedral sweet nostraps fish lightbone ivory satin lacefab man bellish
+
  - link: kelly1.html
    tt: kellytt.jpg
    classes: simp vint bolero bride restyle zip sash ruched floor sweet cap aline lightbone puddle ivory satin lace
@@ -44,14 +48,14 @@
    tt: wildbmaidtt.jpg
    classes: cont simp bmaid cowl buttons high princess floor aline puddle ivory satin man
 
- - link: wild1.html
-   tt: wildtt.jpg
-   classes: trad spec veil bride beading buttons princess floor cathedral sweet nostraps fish lightbone ivory satin lacefab man bellish
-
  - link: hook1.html
    tt: hooktt.jpg
    classes: bride
 
+ - link: ingram1.html
+   tt: ingramtt.jpg
+   classes: bmaid princess midi blue silk dupion
+   
  - link: travis1.html
    tt: travistt.jpg
    classes: trad vint bride cuffs zip buttons notrain floor flow sweet empire lightbone long ivory chiffon satin lacefab
