--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -54,7 +54,7 @@
 
  - link: ingram1.html
    tt: ingramtt.jpg
-   classes: bmaid princess midi blue silk dupion
+   classes: bmaid princess midi blue silk dupion sash
    
  - link: travis1.html
    tt: travistt.jpg
