--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -17,7 +17,7 @@
    classes: vint bride buttons sash peplum halter vneck dupion silk lace  
    
  - link: huggett1.html
-   tt: huggetttt.jpg
+   tt: Huggetttt.jpg
    classes:  bride high princess floor striaght ivory satin man lace long
    
    
