--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -16,7 +16,7 @@
    tt: candlertt.jpg
    classes: vint bride buttons sash peplum halter vneck dupion silk lace  
    
- - link: huggett1.html
+ - link: Huggett1.html
    tt: Huggetttt.jpg
    classes:  bride high princess floor striaght ivory satin man lace long
    
