--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -60,6 +60,9 @@
    tt: travistt.jpg
    classes: trad vint bride cuffs zip buttons notrain floor flow sweet empire lightbone long ivory chiffon satin lacefab
 
+ - link: ivens1.html
+   tt: ivenstt.jpg
+   classes: kids bmaid embellish ivory silk
 
  - label: 2012
 
