--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 baseurl: /
 #baseref: http://localhost:4000/
 baseref: http://felicitywestmacott.github.io/
-baseimageref: http://felicitywestmacott.s3-website-eu-west-1.amazonaws.com/
+baseimageref: http://d12n9ak42bc6mv.cloudfront.net/
