Add snow and lilac to portfolio.

--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -19,6 +19,14 @@
    tt: caseybmaidtt.jpg
    classes: vint bmaid kids wstraps cowl cap lowback nobone bias green satin man
 
+ - link: snow1.html
+   tt: snowtt.jpg
+   classes: trad spec bride wstraps sweet laceup firmbone full hoop floor cathedral layers ivory silk tulle lace corsage
+
+ - link: lilac1.html
+   tt: lilactt.jpg
+   classes: con spec colour bride nostraps square cap puffed buttons firmbone full hoop floor cathedral ruched water silver purple man taffeta lace corsage
+
 
  - label: 2014
 
