--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -25,7 +25,7 @@
 
  - link: lilac1.html
    tt: lilactt.jpg
-   classes: con spec colour bride nostraps square cap puffed buttons firmbone full hoop floor cathedral ruched water silver purple man taffeta lace corsage
+   classes: con spec colour bride nostraps square cap puffed buttons firmbone full hoop floor cathedral ruched water silver purple man taffeta lace corsage bolero
 
 
  - label: 2014
