Add madelei to portfolio.

--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -31,6 +31,10 @@
  - label: 2014
 
 
+ - link: madelei1.html
+   tt: madeleitt.jpg
+   classes: vint bride restyle round cap buttons sash nobone aline midi notrain layers ivory manmade chiffon lace
+
  - link: hunter1.html
    tt: huntertt.jpg
    classes: sash trad bride buttons wstraps floor full sweet lightbone ivory lace
