Fix some  client filters.

--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -5,11 +5,11 @@
 
  - link: mckay1.html
    tt: mckaytt.jpg
-   classes: trad bride veil high sweet long buttons sash firmbone full floor chapel ivory silk organza lace
+   classes: trad bride veil high sweet long buttons sash firmbone full floor chapel ivory silk chiffon lacefab
 
  - link: casey1.html
    tt: caseytt.jpg
-   classes: vint hist cont spec colour bride wstraps high lowback sash lightbone dropped loose striaght floor chapel bias peplum cream gold silk satin chiffon lace tulle bellish
+   classes: vint hist cont spec colour bride wstraps high lowback sash lightbone dropped loose straight floor chapel bias peplum cream gold silk satin chiffon lacefab tulle bellish
 
  - link: caseybmaid1.html
    tt: caseybmaidtt.jpg
@@ -21,11 +21,11 @@
 
  - link: snow1.html
    tt: snowtt.jpg
-   classes: trad spec bride wstraps sweet laceup firmbone full hoop floor cathedral layers ivory silk tulle lace corsage
+   classes: trad spec bride wstraps sweet laceup firmbone full hoop floor cathedral layers ivory silk tulle lacefab corsage
 
  - link: lilac1.html
    tt: lilactt.jpg
-   classes: con spec colour bride nostraps square cap puffed buttons firmbone full hoop floor cathedral ruched water silver purple man taffeta lace corsage bolero
+   classes: cont spec colour bride nostraps square cap puffed buttons firmbone full hoop floor cathedral ruched water silver purple man taffeta lacefab corsage bolero
 
 
  - label: 2014
@@ -33,15 +33,15 @@
 
  - link: madelei1.html
    tt: madeleitt.jpg
-   classes: vint bride restyle round cap buttons sash nobone aline midi notrain layers ivory manmade chiffon lace
+   classes: vint bride restyle round cap buttons sash nobone aline midi notrain layers ivory man chiffon lacefab
 
  - link: hunter1.html
    tt: huntertt.jpg
-   classes: sash trad bride buttons wstraps floor full sweet lightbone ivory lace
+   classes: sash trad bride buttons wstraps floor full sweet lightbone ivory lacefab
 
  - link: harris1.html
    tt: harristt.jpg
-   classes: bride embelish sweet fishtail
+   classes: bride bellish sweet fish
 
  - link: joseph1.html
    tt: josephtt.jpg
@@ -49,7 +49,7 @@
 
  - link: candler1.html
    tt: candlertt.jpg
-   classes: vint bride buttons sash peplum halter vneck dupion silk lace
+   classes: vint bride buttons sash peplum halter vneck dupion silk lacefab
 
  - link: parcell1.html
    tt: parcelltt.jpg
@@ -61,15 +61,15 @@
 
  - link: sophie1.html
    tt: sophiett.jpg
-   classes: trad vint bride buttons layers firmbone sash ruched train wstraps floor sweet vneck aline long ivory chiffon tulle dupion silk man
+   classes: trad vint bride buttons layers firmbone sash ruched wstraps floor sweet vneck aline long ivory chiffon tulle dupion silk man
 
  - link: cristina1.html
    tt: cristinatt.jpg
-   classes: colour simp bride zip ruched notrain wstraps floor flow round waterfall lightbone pink chiffon satin silk
+   classes: colour simp bride zip ruched notrain wstraps floor flow round water lightbone pink chiffon satin silk
 
  - link: keely1.html
    tt: keelytt.jpg
-   classes: colour spar spec bride buttons puffed ruched wstraps floor cathedral full sweet waterfall cap lightbone ivory blue tulle taffeta silk
+   classes: colour spar spec bride buttons puffed ruched wstraps floor cathedral full sweet water cap lightbone ivory blue tulle taffeta silk
 
  - link: wild1.html
    tt: wildtt.jpg
@@ -77,7 +77,7 @@
 
  - link: kelly1.html
    tt: kellytt.jpg
-   classes: simp vint bolero bride restyle zip sash ruched floor sweet cap aline lightbone puddle ivory satin lace
+   classes: simp vint bolero bride restyle zip sash ruched floor sweet cap aline lightbone puddle ivory satin lacefab
 
  - link: wildbmaid1.html
    tt: wildbmaidtt.jpg
@@ -97,11 +97,11 @@
 
  - link: Huggett1.html
    tt: Huggetttt.jpg
-   classes: bride high princess floor striaght ivory satin man lace long
+   classes: bride high princess floor straight ivory satin man lacefab long
 
  - link: ivens1.html
    tt: ivenstt.jpg
-   classes: kids bmaid embellish ivory silk
+   classes: kids bmaid bellish ivory silk
 
 
  - label: 2012
@@ -129,7 +129,7 @@
 
  - link: pearson1.html
    tt: pearsontt.jpg
-   classes: trad colour spec bride beading firmbone peplum wstraps floor cathedral full sweet waterfall laceup ivory blue satin man bellish
+   classes: trad colour spec bride beading firmbone peplum wstraps floor cathedral full sweet water laceup ivory blue satin man bellish
 
  - link: graham1.html
    tt: grahamtt.jpg
@@ -145,7 +145,7 @@
 
  - link: allen1.html
    tt: allentt.jpg
-   classes: bride zip offshoulder aline blue waterfall ruching
+   classes: bride zip offshould aline blue water ruched
 
  - link: white1.html
    tt: whitett.jpg
