Adding gibbon to portfolio.

--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -51,6 +51,10 @@
    tt: candlertt.jpg
    classes: vint bride buttons sash peplum halter vneck dupion silk lacefab
 
+ - link: gibbon1.html
+   tt: gibbontt.jpg
+   classes: kids puffed gold lacefab
+
  - link: parcell1.html
    tt: parcelltt.jpg
    classes: cont spec colour bride beading nostraps sweet laceup firmbone princess fish floor notrain pink man satin tulle bellish
