Added parkinson to portfolio.

--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -35,6 +35,10 @@
  - label: 2014
 
 
+ - link: parkinson1.html
+   tt: parkinsontt.jpg
+   classes: trad bride veil wstraps high sweet quarter sash firmbone full floor chapel ivory satin lacefab tulle
+
  - link: madelei1.html
    tt: madeleitt.jpg
    classes: vint bride restyle round cap buttons sash nobone aline midi notrain layers ivory man chiffon lacefab
