Adding filter tags to brabbs brabbsbmaid and ayesha.

--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -25,7 +25,7 @@
 
  - link: ayesha1.html
    tt: ayeshatt.jpg
-   classes: 
+   classes: cont bride veil vneck cap lowback buttons nobone fish floor chapel white satin lacefab man
 
  - link: snow1.html
    tt: snowtt.jpg
@@ -289,11 +289,11 @@
 
  - link: brabbs1.html
    tt: brabbstt.jpg
-   classes: 
+   classes: trad colour bride beading nostraps sweet laceup firmbone princess floor chapel ivory purple silk lacefab embroid dupion hoop split
 
  - link: brabbsbmaid1.html
    tt: brabbsbmaidtt.jpg
-   classes: 
+   classes: bmaid halter sweet zip midi purple silk dupion
 
  - link: matthews1.html
    tt: matthewstt.jpg
